fix hang when using apps that use lesstif for the motif clipboard (like nedit) bug 46409.  fix for memory leak in clipboard bug 49582. fix for pasting from something like xterm -u8 that uses UTF8_STRING bug 36895 r=blizzard,bruce